--- a/samples/Model/packages.config
+++ b/samples/Model/packages.config
@@ -1,6 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="glfw-sharp" version="0.1.0" targetFramework="net47" />
-  <package id="glTF2Loader" version="1.1.3-alpha" targetFramework="net47" />
-  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net47" />
+  <package id="glTF2Loader" version="1.1.3-alpha" targetFramework="net471" />
+  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net471" />
+  <package id="System.Buffers" version="4.4.0" targetFramework="net471" />
+  <package id="System.Memory" version="4.5.1" targetFramework="net471" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net471" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.1" targetFramework="net471" />
 </packages>
