--- a/vke/VKE.csproj
+++ b/vke/VKE.csproj
@@ -10,17 +10,16 @@
     <TargetFrameworkVersion>v4.7.1</TargetFrameworkVersion>
     <OutputPath>$(SolutionDir)build\$(Configuration)</OutputPath>
     <IntermediateOutputPath>$(SolutionDir)build\obj\$(Configuration)</IntermediateOutputPath>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <Optimize>false</Optimize>    
-    <WarningLevel>4</WarningLevel>
     <CheckForOverflowUnderflow>true</CheckForOverflowUnderflow>
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <DefineConstants>DEBUG;</DefineConstants>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <Optimize>true</Optimize>
-    <WarningLevel>4</WarningLevel>
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -28,46 +27,22 @@
     <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.Core" />
     <Reference Include="System.Numerics" />
-    <Reference Include="glfw-sharp">
-      <HintPath>..\packages\glfw-sharp.0.1.0\lib\netstandard2.0\glfw-sharp.dll</HintPath>
-    </Reference>
     <Reference Include="System.Runtime.CompilerServices.Unsafe">
       <HintPath>..\packages\System.Runtime.CompilerServices.Unsafe.4.6.0-preview3.19128.7\lib\netstandard2.0\System.Runtime.CompilerServices.Unsafe.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="src\Buffer.cs" />
-    <Compile Include="src\CommandBuffer.cs" />
-    <Compile Include="src\CommandPool.cs" />
-    <Compile Include="src\DescriptorPool.cs" />
-    <Compile Include="src\DescriptorSet.cs" />
-    <Compile Include="src\DescriptorSetLayout.cs" />
-    <Compile Include="src\DescriptorSetWrites.cs" />
-    <Compile Include="src\Device.cs" />
-    <Compile Include="src\DeviceObject.cs" />
-    <Compile Include="src\ExtentionsMethods.cs" />
-    <Compile Include="src\FixedUtf8String.cs" />
-    <Compile Include="src\FrameBuffer.cs" />
-    <Compile Include="src\Image.cs" />
-    <Compile Include="src\Instance.cs" />
-    <Compile Include="src\NativeList.cs" />
-    <Compile Include="src\PhysicalDevice.cs" />
-    <Compile Include="src\Pipeline.cs" />
-    <Compile Include="src\PipelineLayout.cs" />
-    <Compile Include="src\Queue.cs" />
-    <Compile Include="src\RenderPass.cs" />
-    <Compile Include="src\SubPass.cs" />
-    <Compile Include="src\SwapChain.cs" />
-    <Compile Include="src\Utils.cs" />
-    <Compile Include="src\Version.cs" />
-    <Compile Include="src\VkWindow.cs" />
-    <Compile Include="src\DebugReport.cs" />
+    <Compile Include="src\**\*.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\vk.net\vk.net.csproj">
       <Project>{7B9878B1-9A69-4577-AC32-2A7A5568C1E8}</Project>
       <Name>vk.net</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\..\glfw-sharp\glfw-sharp.net.csproj">
+      <Project>{FD57E4BF-0AF9-4256-8DF7-80E639573C11}</Project>
+      <Name>glfw-sharp</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
