--- a/vke/VKE.csproj
+++ b/vke/VKE.csproj
@@ -30,8 +30,14 @@
     <Reference Include="System.Runtime.CompilerServices.Unsafe">
       <HintPath>..\packages\System.Runtime.CompilerServices.Unsafe.4.6.0-preview3.19128.7\lib\netstandard2.0\System.Runtime.CompilerServices.Unsafe.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>..\packages\Newtonsoft.Json.10.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
+    <Reference Include="glTFLoader">
+      <HintPath>..\packages\glTF2Loader.1.1.3-alpha\lib\net35\glTFLoader.dll</HintPath>
+    </Reference>
   </ItemGroup>
-  <ItemGroup>
+  <ItemGroup>        
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="src\**\*.cs" />
   </ItemGroup>
@@ -39,10 +45,6 @@
     <ProjectReference Include="..\vk.net\vk.net.csproj">
       <Project>{7B9878B1-9A69-4577-AC32-2A7A5568C1E8}</Project>
       <Name>vk.net</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\..\glfw-sharp\glfw-sharp.net.csproj">
-      <Project>{FD57E4BF-0AF9-4256-8DF7-80E639573C11}</Project>
-      <Name>glfw-sharp</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
