generalize dispose pattern

--- a/samples/Triangle/Triangle.csproj
+++ b/samples/Triangle/Triangle.csproj
@@ -26,6 +26,7 @@
   </ItemGroup>  
   <ItemGroup>
     <Reference Include="System.Numerics" />
+    <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\vk.net\vk.net.csproj">
