--- a/samples/Textured/Textured.csproj
+++ b/samples/Textured/Textured.csproj
@@ -20,9 +20,9 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="*.cs" />
-    <None Include="data\**\*.*">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
+    <Datas Include="..\data\**\*.*">      
+      <Link>data\%(RecursiveDir)%(Filename)%(Extension)</Link>
+    </Datas>
     <GLSLShader Include="shaders\**\*.frag;shaders\**\*.vert" />            
   </ItemGroup>  
   <ItemGroup>
