--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,4 @@
 *.ktx filter=lfs diff=lfs merge=lfs -text
+*.gltf filter=lfs diff=lfs merge=lfs -text
+*.glb filter=lfs diff=lfs merge=lfs -text
+*.jpg filter=lfs diff=lfs merge=lfs -text
