--- a/samples/vkvg_overlay/vkvg_overlay.csproj
+++ b/samples/vkvg_overlay/vkvg_overlay.csproj
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
-    <ProjectGuid>{1F05E74F-AEE8-481C-8FDF-89D81CBB30BE}</ProjectGuid>
+    <ProjectGuid>{1F05E74F-AEE8-481C-8FDF-89D81CCC30BE}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>Model</RootNamespace>
-    <AssemblyName>Model</AssemblyName>
+    <AssemblyName>vkvg_overlay</AssemblyName>
     <TargetFrameworkVersion>v4.7.1</TargetFrameworkVersion>
-    <OutputPath>$(SolutionDir)build\$(Configuration)\samples\Model</OutputPath>
+    <OutputPath>$(SolutionDir)build\$(Configuration)\samples\vkvg_overlay</OutputPath>
     <IntermediateOutputPath>$(SolutionDir)build\obj\$(Configuration)</IntermediateOutputPath>        
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -52,6 +51,9 @@
     </Reference>
     <Reference Include="System.Memory">
       <HintPath>..\..\packages\System.Memory.4.5.2\lib\netstandard2.0\System.Memory.dll</HintPath>
+    </Reference>
+    <Reference Include="vkvg.net">
+      <HintPath>..\..\packages\vkvg.net.0.2.0\lib\netstandard2.0\vkvg.net.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
