--- a/vke/VKE.csproj
+++ b/vke/VKE.csproj
@@ -16,7 +16,7 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <Optimize>false</Optimize>    
     <CheckForOverflowUnderflow>true</CheckForOverflowUnderflow>
-    <DefineConstants>DEBUG;_RENDERDOC;_DEBUG_MARKER</DefineConstants>
+    <DefineConstants>_DEBUG;_RENDERDOC;_DEBUG_MARKER</DefineConstants>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <Optimize>true</Optimize>
@@ -39,16 +39,16 @@
   </ItemGroup>
   <ItemGroup>        
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="src\**\*.cs" Exclude="src\Renderer.cs;src\QueueFamily.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\vk.net\vk.net.csproj">
-      <Project>{7B9878B1-9A69-4577-AC32-2A7A5568C1E8}</Project>
-      <Name>vk.net</Name>
-    </ProjectReference>
+    <Compile Include="src\**\*.cs" Exclude="src\Renderer.cs;src\QueueFamily.cs;src/DebugReport.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\vk.generator\VK\VK.csproj">
+      <Project>{C4556091-4997-404A-866F-8F244EFCADD2}</Project>
+      <Name>VK</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />    
 </Project>
