--- a/vk.rewrite/packages.config
+++ b/vk.rewrite/packages.config
@@ -1,5 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.CSharp" version="4.4.1" targetFramework="net47" />
-  <package id="System.CommandLine.Experimental" version="0.2.0-alpha.19174.3" targetFramework="net47" />
+  <package id="Mono.Cecil" version="0.10.3" targetFramework="net47" />
 </packages>
