--- a/samples/vkvg_overlay/packages.config
+++ b/samples/vkvg_overlay/packages.config
@@ -6,5 +6,6 @@
   <package id="System.Memory" version="4.5.2" targetFramework="net471" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net471" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net471" />
+  <package id="VK.net" version="1.0.0" targetFramework="net471" />
   <package id="vkvg.net" version="0.2.0" targetFramework="net471" />
 </packages>
