--- a/samples/Model/packages.config
+++ b/samples/Model/packages.config
@@ -6,4 +6,5 @@
   <package id="System.Memory" version="4.5.2" targetFramework="net471" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net471" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net471" />
+  <package id="VK.net" version="1.0.0" targetFramework="net471" />
 </packages>
