--- a/samples/TexturedCube/packages.config
+++ b/samples/TexturedCube/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="glfw-sharp" version="0.1.0" targetFramework="net47" />
+  <package id="VK.net" version="1.0.0" targetFramework="net471" />
 </packages>
