--- a/vke/packages.config
+++ b/vke/packages.config
@@ -3,4 +3,5 @@
   <package id="glTF2Loader" version="1.1.3-alpha" targetFramework="net471" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net471" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.6.0-preview3.19128.7" targetFramework="net47" />
+  <package id="VK.net" version="1.0.0" targetFramework="net471" />
 </packages>
