--- a/samples/Triangle/packages.config
+++ b/samples/Triangle/packages.config
@@ -1,5 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<packages>
-  <package id="glfw-sharp" version="0.1.0" targetFramework="net47" />
-  <package id="VK.net" version="1.0.0" targetFramework="net471" />
+<packages>  
+  <package id="Vulkan" version="0.1.0-alpha" targetFramework="net471" />
 </packages>
