--- a/samples/pbrSashaWillem/SachaWillemPbr.csproj
+++ b/samples/pbrSashaWillem/SachaWillemPbr.csproj
@@ -26,10 +26,24 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="*.cs" />
-    <GLSLShader Include="shaders\**\*.frag;shaders\**\*.vert" />                
     <Datas Include="..\data\**\*.*">      
       <Link>data\%(RecursiveDir)%(Filename)%(Extension)</Link>
     </Datas>
+    <GLSLShader Include="shaders\genbrdflut.frag" />
+    <GLSLShader Include="shaders\irradiancecube.frag" />
+    <GLSLShader Include="shaders\pbrtest.frag" />
+    <GLSLShader Include="shaders\prefilterenvmap.frag" />
+    <GLSLShader Include="shaders\simpletexture.frag" />
+    <GLSLShader Include="shaders\skybox.frag" />
+    <GLSLShader Include="shaders\skybox_sw.frag" />
+    <GLSLShader Include="shaders\ui.frag" />
+    <GLSLShader Include="shaders\FullScreenQuad.vert" />
+    <GLSLShader Include="shaders\filtercube.vert" />
+    <GLSLShader Include="shaders\genbrdflut.vert" />
+    <GLSLShader Include="shaders\pbrtest.vert" />
+    <GLSLShader Include="shaders\skybox.vert" />
+    <GLSLShader Include="shaders\skybox_sw.vert" />
+    <GLSLShader Include="shaders\ui.vert" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System.Numerics" />
@@ -55,6 +69,9 @@
     </Reference>
     <Reference Include="VK">
       <HintPath>..\..\packages\Vulkan.0.1.2.2-alpha\lib\netstandard2.0\VK.dll</HintPath>
+    </Reference>
+    <Reference Include="vkvg.net">
+      <HintPath>..\..\packages\vkvg.net.0.2.1-beta\lib\netstandard2.0\vkvg.net.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
