--- a/VK/VK.csproj
+++ b/VK/VK.csproj
@@ -3,13 +3,13 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     
     <Copyright></Copyright>
-    <AssemblyVersion>0.1.2.5</AssemblyVersion>
+    <AssemblyVersion>0.1.2.6</AssemblyVersion>
     <Description>C# vulkan binding</Description>
     <Company></Company>
     <Product>VK</Product>
     <PackageId>Vulkan</PackageId>
     <PackageTags>C# vulkan net binding</PackageTags>    
-    <PackageVersion>$(AssemblyVersion)-alpha</PackageVersion>
+    <PackageVersion>$(AssemblyVersion)</PackageVersion>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageProjectUrl>https://github.com/jpbruyere/vk.net/blob/master/README.md</PackageProjectUrl>
@@ -20,49 +20,33 @@
     
     <Authors>Jean-Philippe Bruyère</Authors>
     
-    <CustomCommands>
+<!--    <CustomCommands>
       <CustomCommands>
         <Command>
           <type>AfterBuild</type>
           <command>mono $(SolutionDir)vk.rewrite/bin/$(Configuration)/vk.rewrite.exe ${TargetFile}</command>
         </Command>
       </CustomCommands>
-    </CustomCommands>        
+    </CustomCommands>   -->     
     <SynchReleaseVersion>false</SynchReleaseVersion>
   </PropertyGroup>
 
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-    <DefineConstants>VK_VERSION_1_0;VK_VERSION_1_1;TRACE;DEBUG;NETSTANDARD;NETSTANDARD2_0</DefineConstants>
-    <CustomCommands>
-      <CustomCommands>
-        <Command>
-          <type>AfterBuild</type>
-          <command>mono /mnt/devel/gts/vk.net/vk.rewrite/bin/Debug/vk.rewrite.exe ${TargetFile}</command>
-        </Command>
-      </CustomCommands>
-    </CustomCommands>
+    <DefineConstants>VK_VERSION_1_0;VK_VERSION_1_1;TRACE;DEBUG;NETSTANDARD;NETSTANDARD2_0</DefineConstants>    
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-    <CustomCommands>
-      <CustomCommands>
-        <Command>
-          <type>AfterBuild</type>
-          <command>mono /mnt/devel/gts/vk.net/vk.rewrite/bin/Release/vk.rewrite.exe ${TargetFile}</command>
-        </Command>
-      </CustomCommands>
-    </CustomCommands>
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="..\vk.generator\bin\**\*.cs">
       <Link>generated\%(Filename)%(Extension)</Link>
     </Compile>
   </ItemGroup>
-<!--  <Target Name="rewrite" AfterTargets="CoreBuild">
+ <Target Name="rewrite" AfterTargets="CoreBuild">
     <Exec Condition="$(OS) == 'Windows_NT'" Command="$(SolutionDir)build/$(TargetFramework)rewrite/vk.rewrite.exe $(OutputPath)VK.dll" />
-    <Exec Condition="$(OS) != 'Windows_NT'" Command="mono $(SolutionDir)vk.rewrite.exe $(OutputPath)VK.dll" ConsoleToMSBuild="true" EchoOff="true">
+    <Exec Condition="$(OS) != 'Windows_NT'" Command="mono ../vk.rewrite/bin/Release/vk.rewrite.exe $(OutputPath)VK.dll" ConsoleToMSBuild="true" EchoOff="true">
         <Output TaskParameter="ConsoleOutput" PropertyName="OutputOfExec" />
     </Exec>
-  </Target>-->
+  </Target>
 </Project>
