--- a/samples/Model/packages.config
+++ b/samples/Model/packages.config
@@ -6,5 +6,5 @@
   <package id="System.Memory" version="4.5.2" targetFramework="net471" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net471" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net471" />
-  <package id="Vulkan" version="0.1.2.5-alpha" targetFramework="net471" />
+  <package id="Vulkan" version="0.1.2.6" targetFramework="net471" />
 </packages>
