--- a/samples/Textured/Textured.csproj
+++ b/samples/Textured/Textured.csproj
@@ -34,7 +34,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\vke\VKE.csproj">
       <Project>{32B7E80D-BEA7-4811-B82D-CC2533069F0A}</Project>
-      <Name>VKE</Name>
+      <Name>CVKL</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
