--- a/samples/deferred/deferred.csproj
+++ b/samples/deferred/deferred.csproj
@@ -7,7 +7,7 @@
     <TargetFrameworkVersion>v4.7.1</TargetFrameworkVersion>
     <OutputPath>$(SolutionDir)build\$(Configuration)\samples\deffered</OutputPath>
     <IntermediateOutputPath>$(SolutionDir)build\obj\$(Configuration)</IntermediateOutputPath>        
-    <StartupObject>deferredDebug.Program</StartupObject>
+    <StartupObject>deferred.Program</StartupObject>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -66,7 +66,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\vke\VKE.csproj">
       <Project>{32B7E80D-BEA7-4811-B82D-CC2533069F0A}</Project>
-      <Name>VKE</Name>
+      <Name>CVKL</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
