--- a/samples/pbrSashaWillem/SachaWillemPbr.csproj
+++ b/samples/pbrSashaWillem/SachaWillemPbr.csproj
@@ -28,27 +28,12 @@
     <Datas Include="..\data\**\*.*">      
       <Link>data\%(RecursiveDir)%(Filename)%(Extension)</Link>
     </Datas>
-    <GLSLShader Include="shaders\genbrdflut.frag" />
-    <GLSLShader Include="shaders\irradiancecube.frag" />
-    <GLSLShader Include="shaders\pbrtest.frag" />
-    <GLSLShader Include="shaders\prefilterenvmap.frag" />
-    <GLSLShader Include="shaders\simpletexture.frag" />
-    <GLSLShader Include="shaders\skybox.frag" />
-    <GLSLShader Include="shaders\skybox_sw.frag" />
-    <GLSLShader Include="shaders\ui.frag" />
-    <GLSLShader Include="shaders\FullScreenQuad.vert" />
-    <GLSLShader Include="shaders\filtercube.vert" />
-    <GLSLShader Include="shaders\genbrdflut.vert" />
-    <GLSLShader Include="shaders\pbrtest.vert" />
-    <GLSLShader Include="shaders\skybox.vert" />
-    <GLSLShader Include="shaders\skybox_sw.vert" />
-    <GLSLShader Include="shaders\ui.vert" />
+    <GLSLShader Include="shaders\**\*.frag;shaders\**\*.vert;shaders\**\*.comp" /> 
   </ItemGroup>
   <ItemGroup>
-    <Reference Include="System.Numerics" />
     <Reference Include="System" />
     <Reference Include="System.Numerics.Vectors">
-      <HintPath>..\..\packages\System.Numerics.Vectors.4.5.0\lib\net46\System.Numerics.Vectors.dll</HintPath>
+      <HintPath>..\..\packages\System.Numerics.Vectors.4.6.0-preview4.19212.13\lib\net46\System.Numerics.Vectors.dll</HintPath>
     </Reference>
     <Reference Include="mscorlib" />
     <Reference Include="Newtonsoft.Json">
@@ -72,15 +57,10 @@
     <Reference Include="vkvg.net">
       <HintPath>..\..\packages\vkvg.net.0.2.1-beta\lib\netstandard2.0\vkvg.net.dll</HintPath>
     </Reference>
+    <Reference Include="System.Numerics" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\vke\VKE.csproj">
-      <Project>{32B7E80D-BEA7-4811-B82D-CC2533069F0A}</Project>
-      <Name>VKE</Name>
-    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="ui\" />
@@ -89,6 +69,12 @@
     <EmbeddedResource Include="ui\fps.crow">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\vke\CVKL.csproj">
+      <Project>{32B7E80D-BEA7-4811-B82D-CC2533069F0A}</Project>
+      <Name>CVKL</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)spirv.targets" />    
