--- a/samples/pbrSashaWillem/packages.config
+++ b/samples/pbrSashaWillem/packages.config
@@ -4,7 +4,7 @@
   <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net471" />
   <package id="System.Buffers" version="4.5.0" targetFramework="net471" />
   <package id="System.Memory" version="4.5.2" targetFramework="net471" />
-  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net471" />
+  <package id="System.Numerics.Vectors" version="4.6.0-preview4.19212.13" targetFramework="net471" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net471" />
   <package id="vkvg.net" version="0.2.1-beta" targetFramework="net471" />
   <package id="Vulkan" version="0.1.2.6" targetFramework="net471" />
